Revert "Changed class names for svgs because of instagram really to make naming consistent. Made change only to welcome page right now to make sure everything works. Added js so will work on mobile."
This reverts commit b7c4fa4ee635a1a548a1603edeadce813859de4f.

--- a/app/assets/styles/modules/_icons.css
+++ b/app/assets/styles/modules/_icons.css
@@ -1,22 +1,21 @@
 /* Styling Social Media Icons */
 svg {
-	transition: all 0.5s ease;
+	transition: all 0.5s;
 }
 
-svg:hover, svg:active {
+svg:active {
 	transform: scale(1.25);
 	transition: all 0.5s;
-	cursor: pointer;
 }
 
-.twitter-svg:hover, .twitter-svg:active {
+.twitter:active {
 	fill: $mainBrightRed;
 	transform: rotateX(30deg) rotateY(25deg) scale(1.5);
 }
 
-.pinterest-svg:hover, .pinterest-svg:active,
-.facebook-svg:hover, .facebook-svg:active,
-.instagrm-svg:hover, .instagrm-svg:active {
+.pinterest:active,
+.facebook:active,
+.instagram:active {
 	background: $mainBlack;
 	fill: $mainBrightRed;
 	border-radius: 50%;
