--- a/app/assets/styles/modules/_reservation.css
+++ b/app/assets/styles/modules/_reservation.css
@@ -89,7 +89,7 @@ body.reserve {
 	width: 198px;
 }
 
-.find-a-table:hover a, .find-a-table:active a {
+.find-a-table:hover a {
 	cursor: pointer;
 }
 
@@ -223,7 +223,7 @@ body.reserve {
 	transition: transform 0.3 ease-in-out;
 }
 
-.newsletter-form-field-element:hover, .newsletter-form-field-element:active, .newsletter-form-field-element:focus {
+.newsletter-form-field-element:hover, .newsletter-form-field-element:focus {
 	transform: scale(1.1);
 	transition: color 0.5s ease-in-out;
 }
